@@ -5,6 +5,7 @@ http://winmerge.org/tracker/[tracker-id]
 
 WinMerge 2.13.3
   Bugfix: Could not copy files from right to left (#2556904)
+  Bugfix: Don't show file name extension for folders (#2563314)
   Translation updates:
   - French (#2551043, #2551066)
 
